@@ -197,6 +197,44 @@ class CDbCriteria
 		return $this->addCondition($condition,$operator);
 	}
 
+    /**
+	 * Appends an NOT IN condition to the existing {@link condition}.
+	 * The NOT IN condition and the existing condition will be concatenated via the specified operator
+	 * which defaults to 'AND'.
+	 * The NOT IN condition is generated by using the SQL NOT IN operator which requires the specified
+	 * column value to be among the given list of values.
+	 * @param string the column name (or a valid SQL expression)
+	 * @param array list of values that the column value should be in
+	 * @param string the operator used to concatenate the new condition with the existing one.
+	 * Defaults to 'AND'.
+	 * @return CDbCriteria the criteria object itself
+	 * @since 1.1.1
+	 */
+	public function addNotInCondition($column,$values,$operator='AND')
+	{
+		if(($n=count($values))<1)
+			return $this;
+		if($n===1)
+		{
+			$value=reset($values);
+			if($value===null)
+				return $this->addCondition($column.' IS NOT NULL');
+			$condition=$column.'!='.self::PARAM_PREFIX.$this->_paramCount;
+			$this->params[self::PARAM_PREFIX.$this->_paramCount++]=$value;
+		}
+		else
+		{
+			$params=array();
+			foreach($values as $value)
+			{
+				$params[]=self::PARAM_PREFIX.$this->_paramCount;
+				$this->params[self::PARAM_PREFIX.$this->_paramCount++]=$value;
+			}
+			$condition=$column.' NOT IN ('.implode(', ',$params).')';
+		}
+		return $this->addCondition($condition,$operator);
+	}
+
 	/**
 	 * Appends a condition for matching the given list of column values.
 	 * The generated condition will be concatenated to the existing {@link condition}
